--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,6 @@ spring.jpa.hibernate.ddl-auto=update
 
 # CONF JWT
 jwt.secret=${SECRET_KEY}
+
+logging.level.org.springframework.security=DEBUG
+logging.level.com.servicios.web2.ec1=DEBUG
