--- a/pom.xml
+++ b/pom.xml
@@ -89,6 +89,13 @@
             <scope>runtime</scope>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/org.springframework.security/spring-security-oauth2-authorization-server -->
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-oauth2-authorization-server</artifactId>
+            <version>1.5.3</version>
+        </dependency>
+
 	</dependencies>
 
 	<build>
